diary/frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    version: v1
  name: frontend-deployment
  namespace: diary
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
        version: v1
    spec:
      containers:
      - image: rasouza/diary-frontend
        name: frontend
        ports:
        - containerPort: 8000
        volumeMounts:
        - name: nginx-config
          mountPath: /etc/nginx/conf.d
        - name: env-config
          mountPath: /usr/share/nginx/html
      volumes:
      - name: nginx-config
        configMap:
          name: nginx-config
      - name: env-config
        configMap:
          name: env-config
      restartPolicy: Always
  revisionHistoryLimit: 0
