diary/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: frontend
  name: frontend-svc
  namespace: diary
spec:
  ports:
  - name: http
    port: 80
    targetPort: 80
  selector:
    app: frontend
