diary/frontend/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: frontend-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: frontend-svc
          servicePort: http
    host: diary-web.rasouza.dev
  - http:
      paths:
      - backend:
          serviceName: frontend-svc
          servicePort: http
    host: diary.rasouza.dev
  tls:
  - hosts:
    - diary-web.rasouza.dev
    - diary.rasouza.dev
    secretName: cloudflare-tls
